--- a/index.html
+++ b/index.html
@@ -6,11 +6,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> bet-project</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- <section1> -->
 
+        <title>bet-project</title>
+<header>
+    <div class=nav>
+    <div>
+        <img src="images/cash.png" width:5%>
+    </div>
+    <div>
+    <input type="button" value="language">
+    </div>
+    <div>
+    <input type="button" value="Register">
+</div>
+
+<input type="button" value="Login">
+</div>
+<div class="header">
+<table>
+    <thead>
+        <th>Sports</th>
+    <th>live Games</th>
+   <th>Virtuals</th> 
+   </thead>
+   <tbody>
+       <tr>
+           <td>football</td>
+           <td>
+               south korea vs 
+               newzeeland
+            </td>
+            <td>
+                <iframe width="200" src="https://www.youtube.com/embed/SaV5M_eI2jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </td>
+       </tr>
+       <tr>
+           <td>boxing</td>
+           <td>Jamaicah vs Europe</td>
+           <td>
+           <iframe width="200" src="https://www.youtube.com/embed/jw4wk6gpICg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </td>
+       </tr>
+       <tr>
+           <td>baseball</td>
+           <td>france vs Enland</td>
+           <td><iframe width="200" src="https://www.youtube.com/embed/lGx88Mr4718" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+       </tr>
+       <tr>
+           <td>Ice Hockey</td>
+           <td>Netherland vs Egypt</td>
+           <td><iframe width="200" src="https://www.youtube.com/embed/0_qTxNIQy7I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+       </tr>
+       <tr>
+           <td>Handball</td>
+           <td>kenya vs Uganda</td>
+           <td><iframe width="200" src="https://www.youtube.com/embed/UovdZ7XB-j0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+       </tr>
+       <tr>
+           <td>Basketball</td>
+           <td>Sudan vs Uganda</td>
+           <td><iframe width="200" src="https://www.youtube.com/embed/ue1NT3QhuVU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+       </tr>
+       <tr>
+           <td>Table Tennis</td>
+           <td>Uganda vs Tanzania</td>
+           <td>
+            <iframe width="200" src="https://www.youtube.com/embed/dokC3iGTmSw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </td>
+       </tr>
+       <tr>
+           <td>Tennis</td>
+           <td>Ethiopia vs Asia</td>
+           <td>
+            <iframe width="200" src="https://www.youtube.com/embed/R5X6OCtnN4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+           </td>
+       </tr>
+       <tr>
+           <td>Rugby</td>
+           <td>Kenya vs uk</td>
+           <td>
+            <iframe width="200" src="https://www.youtube.com/embed/DcvOySUDQJY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </td>
+       </tr>
+       <tr>
+           <td>volleyball</td>
+           <td>America vs China</td>
+           <td>
+            <iframe width="200" src="https://www.youtube.com/embed/wG1GkKIgxxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </td>
+       </tr>
+
+   </tbody>
+</table>
+</div>
+</header>
     <!-- </section1> -->
 
     <!-- <section2> -->
