--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <img src="images/cash.png" width:5%>
     </div>
     <div>
-    <input type="button" value="language">
+    <input type="button" value="language" class="btn">
     </div>
     <div>
-    <input type="button" value="Register">
+    <input type="button" value="Register" class="btn">
 </div>
 
-<input type="button" value="Login">
+<input type="button" value="Login" class="btn">
 </div>
 <div class="header">
 <table>
