--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <!-- <section1> -->
 <header>
-    
     <div class=nav>
     <div>
         <img src="images/cash.png" width:5%>
@@ -31,7 +30,11 @@
         <th>Sports</th>
     <th>live Games</th>
    <th>Virtuals</th> 
+   <th>1</th>
+   <th>x</th>
+   <th>2</th>
    </thead>
+   <div class="container">
    <tbody>
        <tr>
            <td>football</td>
@@ -42,6 +45,10 @@
             <td>
                 <iframe width="200" src="https://www.youtube.com/embed/SaV5M_eI2jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
+            <td>3.78</td>
+            <td>2.85</td>
+            <td>4.50</td>
+            
        </tr>
        <tr>
            <td>boxing</td>
@@ -49,33 +56,51 @@
            <td>
            <iframe width="200" src="https://www.youtube.com/embed/jw4wk6gpICg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </td>
+           <td>1.45</td>
+           <td>1.34</td>
+           <td>2.45</td>
        </tr>
        <tr>
            <td>baseball</td>
            <td>france vs Enland</td>
            <td><iframe width="200" src="https://www.youtube.com/embed/lGx88Mr4718" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-       </tr>
+       <td>1.80</td>
+       <td>1.35</td>
+       <td>2.45</td>
+        </tr>
        <tr>
            <td>Ice Hockey</td>
            <td>Netherland vs Egypt</td>
            <td><iframe width="200" src="https://www.youtube.com/embed/0_qTxNIQy7I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-       </tr>
+       <td>4.00</td>
+       <td>3.00</td>
+       <td>2.95</td>
+        </tr>
        <tr>
            <td>Handball</td>
            <td>kenya vs Uganda</td>
            <td><iframe width="200" src="https://www.youtube.com/embed/UovdZ7XB-j0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-       </tr>
+       <td>5.78</td>
+       <td>6.45</td>
+       <td>1.90</td>
+        </tr>
        <tr>
            <td>Basketball</td>
            <td>Sudan vs Uganda</td>
            <td><iframe width="200" src="https://www.youtube.com/embed/ue1NT3QhuVU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-       </tr>
+      <td>7.0</td>
+      <td>9.0</td>
+      <td>6.5</td>
+        </tr>
        <tr>
            <td>Table Tennis</td>
            <td>Uganda vs Tanzania</td>
            <td>
             <iframe width="200" src="https://www.youtube.com/embed/dokC3iGTmSw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </td>
+           <td>2.35</td>
+           <td>5.4</td>
+           <td>2.54</td>
        </tr>
        <tr>
            <td>Tennis</td>
@@ -83,6 +108,9 @@
            <td>
             <iframe width="200" src="https://www.youtube.com/embed/R5X6OCtnN4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
            </td>
+           <td>3.45</td>
+           <td>5.40</td>
+<td>1.25</td>
        </tr>
        <tr>
            <td>Rugby</td>
@@ -90,6 +118,9 @@
            <td>
             <iframe width="200" src="https://www.youtube.com/embed/DcvOySUDQJY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </td>
+           <td>1.0</td>
+           <td>1.95</td>
+           <td>2.45</td>
        </tr>
        <tr>
            <td>volleyball</td>
@@ -97,9 +128,12 @@
            <td>
             <iframe width="200" src="https://www.youtube.com/embed/wG1GkKIgxxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </td>
+           <td>2.05</td>
+           <td>7.0</td>
+           <td>2.10</td>
        </tr>
-
    </tbody>
+</div>
 </table>
 </div>
 </header>
