made changes on section

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 
     <!-- <section2> -->
       
-
+<div class="container">
       <div class="head-sec1">
         <div class="img1">
           <img src="images/graph.png" alt="graphic design" />
         </div>
-        <div>
+        <div class="progress">
           <div class="paragraph-sec1">
-            <h2 class="foot-ph1">Football Progress Graph</h2>
+            <h2 class="foot-ph1">Football Progress Graph (2019)</h2>
             <p>
               Our betting site has been progressing with progress in Football in
               the world.
@@ -131,7 +131,7 @@
           </div>
         </div>
       </div>
-  
+    </div>
       <section>
         <div class="container">
           <div class="team-btn">
