--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="container">
       <div class="head-sec1">
         <div class="img1">
-          <img src="images/graph.png" alt="graphic design" />
+          <img src="images/premier.png" alt="graphic design"width="650" >
         </div>
         <div class="progress">
           <div class="paragraph-sec1">
