--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <p class="trophy1">Win a trophy in form of cash now!</p>
           </div>
           <div class="treasure">
-            <div>
+            <div class="treasure-container">
               <img src="images/treasure.png" alt="" width="120" />
             </div>
   
