change the logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="nav">
       <div class="nav1">
         <div>
-            <img src="images/cash.png" width:5%>
+            <img src="images3/logos/BETCASH.png" width:5%>
         </div>
         <div class="nav-right">
         <div>
