--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <div class="nav">
       <div class="nav1">
         <div class="logo">
-          <!-- <img src="images/cash.png" width:5%> -->
           <img src="images3/logos/BETCASH.png" alt="" class="top-logo"> 
         </div>
 
@@ -38,7 +37,7 @@
             <input type="button" value="Register" class="btn">
           </div>
           <div>
-            <input type="button" value="Login" class="btn">
+            <input type="button" value="Login" class=" btn mbtn">
           </div>
         </div>
       </div>
